test_programs/compile_failure/noirc_frontend_tests_errors_with_better_message_when_trying_to_invoke_struct_field_that_is_a_function/src/main.nr

        pub struct Foo {
            wrapped: fn(Field) -> bool,
        }

        impl Foo {
            fn call(self) -> bool {
                self.wrapped(1)
            }
        }

        fn main() {}
    